# image_filters_js_wasm

./: Readme.md  index.html  index.js
django_img_uploader/: manage.py
django_img_uploader/django_img_uploader/: asgi.py  settings.py  urls.py  wsgi.py
django_img_uploader/img_uploader/: apps.py  forms.py  models.py  views.py
django_img_uploader/img_uploader/templates/: images.html  upload.html  upload_htmx.html  upload_xhr.html
rust_img_uploader/: Cargo.toml
rust_img_uploader/src/: main.rs
templates/: images.html
