[package]
name = "rust_img_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.2", features = ["cors", "fs"] }
http = "*"  # already a dependency of tower-http
mime = "*"
tempfile = "3"
serde_json = "*"
thiserror = "*"
askama = "0.11"

[profile.release]
opt-level = "s" # optim for size
lto = true # enable lto
codegen-units = 1 # reduce // code generation units
panic = "abort" # no unwind on panic
# strip = true